[project]
name = "kepler-titiler-tests"
description = "A dynamic tile server for Raster layer in Kepler.gl."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Igor Dykhta", email = "idykhta@foursquare.com"},
]
keywords = [
    "Kepler.gl",
    "Raster Layer",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
version="0.0.1"
dependencies = [
    "fastapi>=0.100.0",
    "titiler.core==0.21.1",
    "titiler.xarray==0.21.1",
    "titiler.extensions==0.21.1",
    "titiler.mosaic==0.21.1",
    "titiler.application==0.21.1",
]

[project.urls]
Homepage = 'https://github.com/igorDykhta/kepler-titiler-tests'
Documentation = "https://github.com/igorDykhta/kepler-titiler-tests"
Issues = "https://github.com/igorDykhta/kepler-titiler-tests/issues"
Source = "https://github.com/igorDykhta/kepler-titiler-tests"
Changelog = "https://github.com/igorDykhta/kepler-titiler-tests/changelog"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling>=1.12.0"]
build-backend = "hatchling.build"
